--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <form id="sumar-form">
       <label for="primer-numero">Ingrese un numero:</label>
       <input type="number" id="primer-numero" />
+      <input type="submit" value="Enviar" id="sumar-button" />
     </form>
     <div id="resultado-div"></div>
 
